# VideoPlay2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  ReadMe.txt
AudioMini/: AudioMini.h  CMakeLists.txt
Test/: CMakelists.txt
Test/TestAudioDes/: CMakeLists.txt  VideoDes.cpp  VideoDes.h
VideoDes/: CMakeLists.txt  VideoDes.cpp  VideoDes.h  VideoDesExport.cpp  VideoDesExport.h  VideoExport.cpp  VideoExport.h
VideoDes/linux/lib/: libavdevice.so.59.7.100  libavfilter.so.8.44.100  libavformat.so.59.27.100  libavutil.so.57.28.100  libswresample.so.4.7.100  libswscale.so.6.7.100
VideoDes/linux/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
VideoDes/win/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
VideoGL/: CMakeLists.txt  VideoGL.cpp  VideoGL.h  VideoGLExport.cpp  VideoGLExport.h  glad.c
VideoGL/include/VideoGL/: VideoGLExport.h
VideoGL/include/glad/: glad.h
VideoPlay/: CMakeLists.txt  main.cpp
module/: CMakeLists.txt
